# CrediWise

./: .gitignore  CLAUDE.md  Makefile  PLAN.md  PLAN2-FINAL.md  README.md
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_bootstrap_extensions.py  0002_auth_identity_governance.py  0003_upload_storage.py  0004_extraction_trust_layer.py  0005_review_pending_status.py  0006_transaction_duplicate_signal.py  0007_twin_risk_safe_borrowing.py  0008_assessment_liquidity_buffer.py  0009_shocks_offers.py  0010_cycle6_contract_completion.py  0011_repayment_model_governance.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  config.py  deps.py  errors.py  logging.py  rate_limit.py  security.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/engines/: cash_flow_twin.py  file_security.py  loan_math.py  normalization.py  offer.py  repayment_features.py  risk.py  safe_borrowing.py  shock.py  trust_layer.py
backend/app/models/: __init__.py  assessment.py  assessment_document.py  assessment_input_snapshot.py  assessment_reason_code.py  assessment_transaction.py  audit_log.py  cash_flow_event.py  correction.py  document_processing_run.py  document_verification_result.py  enums.py  financial_account.py  financial_profile.py  financing_need.py  income_source.py  lender.py  lender_offer.py  mixins.py  model_version.py  monthly_cash_flow_snapshot.py  offer_assessment.py  pipeline_stage_run.py  recurring_series.py  refresh_token.py  repayment_model_prediction.py  sa_enum.py  shock_scenario.py  source_document.py  transaction.py  user.py
backend/app/pipeline/: __init__.py  assessment_tasks.py  celery_app.py  dispatch.py  document_tasks.py
backend/app/repositories/: assessment_reason_code_repository.py  assessment_repository.py  correction_repository.py  document_processing_run_repository.py  document_verification_result_repository.py  financial_account_repository.py  financial_profile_repository.py  financing_need_repository.py  lender_offer_repository.py  lender_repository.py  model_version_repository.py  (+9 more)
backend/ml/: __init__.py
backend/scripts/: generate_dev_jwt_keys.py
backend/tests/: conftest.py
(+312 files in other folders)
