[project]
name = "crediwise-backend"
version = "0.1.0"
description = "CrediWise backend — Two-Way Credit Safety Engine API, workers, and deterministic scoring engines."
requires-python = ">=3.12,<3.13"
readme = "../README.md"
license = { text = "Proprietary" }

dependencies = [
  "fastapi>=0.139,<0.140",
  "uvicorn[standard]>=0.32,<0.33",
  "pydantic>=2.9,<3",
  "pydantic-settings>=2.6,<3",
  "sqlalchemy>=2.0.35,<2.1",
  "alembic>=1.13.3,<2",
  "psycopg[binary]>=3.2.3,<4",
  "celery>=5.4.0,<6",
  "redis>=5.1.1,<6",
  "boto3>=1.35.0,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10",
  "pytest-cov>=5.0.0,<6",
  "httpx2>=2.7,<3",
  "ruff>=0.7.0,<0.8",
  "black>=26.3.1,<27",
  "mypy>=1.12.0,<2",
  "fakeredis>=2.25.1,<3",
  "types-redis>=4.6.0,<5",
  "pip-audit>=2.7.3,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "app.engines.*"
disallow_untyped_defs = true
disallow_any_explicit = true

[[tool.mypy.overrides]]
module = "app.services.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "app.schemas.*"
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["celery.*", "kombu.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml"

[tool.coverage.run]
source = ["app"]
omit = ["app/db/seeds/*"]

[tool.coverage.report]
fail_under = 70
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]
